[tool.poetry]
name = "discord-cardic-inspiration"
version = "0.1.0"
description = ""
authors = ["ryleu <<>>"]
license = "gpl-3"

[tool.poetry.dependencies]
python = "^3.8"
d20 = "^1.1.2"
"discord.py" = "^1.7.3"
discord-py-interactions = "3.x.x"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
