[tool.poetry]
name = "discord-random"
version = "2.0.0"
description = ""
authors = ["ryleu <riley@ryleu.me>"]
license = "gpl-3"

[tool.poetry.dependencies]
python = "^3.11"
d20 = "^1.1.2"
discord-py-interactions = "^5.10.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
